--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ output/*
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+coverage.txt
 
 # Go test binaries
 *.test
